# archive-hs-weaver

./: .gitignore  README.md  stack.yaml  weaver.cabal
src/: Main.hs  Weaver.hs
weaver/: weaver.hs
weaverc/: weaverc.hs
weaverd/: weaverd.hs
