name:                weaver
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/tene/weaver#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen Weeks
maintainer:          tene@allalone.org
copyright:           MIT
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Weaver
  build-depends:       base
                     , cereal
                     , cereal-text
                     , courier
                     , bytestring
                     , text
  default-language:    Haskell2010

executable weaver
  hs-source-dirs:      weaver
  main-is:             weaver.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, brick, data-default, vty, lens
                     , vector, process, transformers, bytestring, utf8-string
                     , weaver, text
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N -optl-static -optl-pthread
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable weaverc
  hs-source-dirs:      weaverc
  main-is:             weaverc.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, weaver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

executable weaverd
  hs-source-dirs:      weaverd
  main-is:             weaverd.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, containers, weaver, cereal, courier
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
